--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">V</a>
+          <a class="navbar-brand" href="#"><img class="logo" src="img/logo.jpg" alt="logo"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -63,7 +63,7 @@
             </ul>
           </div>
         <!--/.navbar-collapse -->
-        <form class="navbar-form" role="search">
+        <form class="navbar-form" role="search" >
           <div class="input-group add-on">
             <input class="form-control" placeholder="what are you looking for" name="srch-term" id="srch-term" type="text">
             <div class="input-group-btn">
@@ -117,56 +117,63 @@
         </a>
       </div>
     </div>
-    <section class="container item">
-      <div class="row">
-          <div class="col-xs-6">
+    <section class="container items">
+      <div class="row deal-header">
+          <div class="col-xs-9 ">
               <h2>Deals of the day</h2>
           </div>
-          <div class="col-xs-6">
+          <div class="col-xs-3">
               <p>13:15</p>
           </div>
       </div>
      
-      <div class="row">
-        <div class="col-xs-4">
+      <div class="row items-holder">
+        <div class="item-list">
+          <a href="#">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0Igm1HyIQAId8D2srbhf8JPHJ3i3bKAS6tADWKZTs3VZygJDH" alt="item"/>
           <p>Portable Dc air</p>
-          <div class="row">
-            <div class="col-xs-6 current-price">
+          <div class="price">
+            <div class="current-price">
               #8500
             </div>
-            <div class="col-xs-6 previous-price">
+            <div class="previous-price">
               <del>#15000</del>
             </div>
           </div>
+          </a>
         </div>
-        <div class="col-xs-4">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0Igm1HyIQAId8D2srbhf8JPHJ3i3bKAS6tADWKZTs3VZygJDH" alt="item"/>
+        <div class=" item-list">
+            <a href="#">
+          <img src="https://ng.jumia.is/w-nIi_aRX8-trjnWuPw7w_jlKBE=/fit-in/220x220/filters:fill(white)/product/36/68107/1.jpg?5452" alt="item"/>
           <p>Portable Dc air</p>
-          <div class="row">
-            <div class="col-xs-6 current-price">
+          <div class="price">
+            <div class="current-price">
               #8500
             </div>
-            <div class="col-xs-6 previous-price">
+            <div class="previous-price">
               <del>#15000</del>
             </div>
           </div>
+          </a>
         </div>
-        <div class="col-xs-4">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0Igm1HyIQAId8D2srbhf8JPHJ3i3bKAS6tADWKZTs3VZygJDH" alt="item"/>
+        <div class="item-list">
+            <a href="#">
+          <img src="https://n1.sdlcdn.com/imgs/d/n/i/large/Classic-Essentials-Enamle-Cookware-Set-SDL042440854-1-c2568.jpg" alt="item"/>
           <p>Portable Dc air</p>
-          <div class="row">
-            <div class="col-xs-6 current-price">
+          <div class="price">
+            <div class="current-price">
               #8500
             </div>
-            <div class="col-xs-6 previous-price">
+            <div class="previous-price">
               <del>#15000</del>
             </div>
           </div>
+          </a>
         </div>
       </div>
+      <div class="clearfix" ></div>
     </section>
-    <section class="container-fliud">
+    <section class="container-fliud advt">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSft3Hwq3T2DGaczVJzRLEpQqNtSx-jBbeU0Iq1NgP69RrQ3_MVLg" alt="edvert">
     </section>
     <footer class="container-fliud">
