--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Vconnect | Home</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -174,7 +174,7 @@
       <div class="clearfix" ></div>
     </section>
     <section class="container-fliud advt">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSft3Hwq3T2DGaczVJzRLEpQqNtSx-jBbeU0Iq1NgP69RrQ3_MVLg" alt="edvert">
+        <img src="https://cdn.vajor.com/pub/media/catalog/category/TOP-accessories-banner-new-WWC.jpg" alt="edvert">
     </section>
     <footer class="container-fliud">
       <div class="container">
